Fix calendar caption color in contrast color scheme (#5709)

--- a/styles/widgets/generic/color-schemes/contrast/generic.contrast.less
+++ b/styles/widgets/generic/color-schemes/contrast/generic.contrast.less
@@ -1460,7 +1460,7 @@
 
 @calendar-button-caption-active-bg: @base-inverted-bg;
 @calendar-button-footer-active-bg: @base-inverted-bg;
-@calendar-button-caption-color: @base-accent;
+@calendar-button-caption-color: @base-text-color;
 
 /**
 * @name 110. Shevron icon color
